--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </div>
 
       <div style="position: fixed; border: 6px solid rgb(187, 187, 211); border-radius: 10px ; left: 715px; top:20px; width: 140px; height: 50px; padding: 4px; background-color: #cae8ca;">
-      <button style="position: fixed; border: 2px solid #4CAF50; " onclick="displayDate()">BOARD GAME</button><h4 style="position: fixed;" id="demo2" onclick="changeText(this)"></h4>
+      <button style="position: fixed; border: 2px solid #4CAF50; " onclick="displayDate()">BOARD GAME</button><h4 style="position:sticky;" id="demo2" onclick="changeText(this)"></h4>
       </div> 
 
       <div style="position: fixed; border: 6px solid blue; border-radius: 10px ; left: 915px; top:10px; width: 355px; height: 80px; padding: 4px; background-color: #cae8ca;">
