--- a/index.html
+++ b/index.html
@@ -92,15 +92,19 @@
   </div>
   <div>
       <div style="position: fixed; border: 6px solid blue; border-radius: 10px ; left: 260px; top:10px; width: 355px; height: 80px; padding: 4px; background-color: #cae8ca;">
-      <button style="position: fixed; border: 2px solid #4CAF50; " onclick="displayDate()">The first player 'YOU' ! Play with mouse</button><h4 style="position: fixed;" id="demo1" onclick="changeText(this)"></h4>
+      <button style="position: fixed; border: 2px solid #4CAF50; " onclick="displayDate()">The first player 'YOU' ! Play with mouse</button><h4 style="position: fixed;" id="demo11" onclick="changeText(this)"></h4>
       </div>
 
       <div style="position: fixed; border: 6px solid rgb(187, 187, 211); border-radius: 10px ; left: 715px; top:20px; width: 140px; height: 50px; padding: 4px; background-color: #cae8ca;">
-      <button style="position: fixed; border: 2px solid #4CAF50; " onclick="displayDate()">BOARD GAME</button><h4 style="position: fixed;" id="demo1" onclick="changeText(this)"></h4>
+      <button style="position: fixed; border: 2px solid #4CAF50; " onclick="displayDate()">BOARD GAME</button><h4 style="position: fixed;" id="demo11" onclick="changeText(this)"></h4>
       </div> 
 
       <div style="position: fixed; border: 6px solid blue; border-radius: 10px ; left: 915px; top:10px; width: 355px; height: 80px; padding: 4px; background-color: #cae8ca;">
-      <button style="position: fixed; border: 2px solid #4CAF50; " onclick="displayDate()">The computer player !</button><h4 style="position: fixed;" id="demo1" onclick="changeText(this)"></h4>
+      <button style="position: fixed; border: 2px solid #4CAF50; " onclick="displayDate()">The computer player !</button><h4 style="position: fixed;" id="demo11" onclick="changeText(this)"></h4>
+      </div> 
+
+      <div style="position: fixed; border: 6px solid blue; border-radius: 10px ; left: 615px; top:760px; width: 355px; height: 80px; padding: 4px; background-color: #cae8ca;">
+      <button style="position: fixed; border: 2px solid #4CAF50; " onclick="displayDate()">DATE-TİME</button><h4 style="position: fixed;" id="demo1" onclick="changeText(this)"></h4>
       </div> 
       
       <script>
