--- a/index.html
+++ b/index.html
@@ -104,12 +104,19 @@
       </div> 
 
       <div style="position: fixed; border: 6px solid blue; border-radius: 10px ; left: 615px; top:760px; width: 355px; height: 80px; padding: 4px; background-color: #cae8ca;">
-      <button style="position: fixed; border: 2px solid #4CAF50; " onclick="displayDate()">DATE-TİME</button><h4 style="position: fixed;" id="demo1" onclick="changeText(this)"></h4>
+      <button style=" border: 2px solid #4CAF50; " onclick="displayDate()">DATE-TİME</button><h4 style="position: fixed;" id="demo1" onclick="changeText(this)"></h4>
       </div> 
       
       <script>
       function displayDate() {document.getElementById("demo1").innerHTML = Date();}
       </script>
+
+
+
+
+
+
+
 
 
   <div>
