--- a/index.html
+++ b/index.html
@@ -103,10 +103,15 @@
       <button style="position: fixed; border: 2px solid #4CAF50; " onclick="displayDate()">The computer player !</button><h4 style="position: fixed;" id="demo11" onclick="changeText(this)"></h4>
       </div> 
 
-      <div style="position: fixed; border: 6px solid blue; border-radius: 10px ; left: 615px; top:760px; width: 355px; height: 80px; padding: 4px; background-color: #cae8ca;">
-      <button style=" border: 2px solid #4CAF50; " onclick="displayDate()">DATE-TİME</button><h4 style="position: fixed;" id="demo1" onclick="changeText(this)"></h4>
-      </div> 
       
+
+      <div style="position: fixed; border: 6px solid blue; border-radius: 10px; left: 615px; top: 760px; width: 355px; height: 80px; padding: 6px;  background-color: #cae8ca;  
+      box-sizing: border-box;  overflow: hidden;">
+      <button style="border: 2px solid #4CAF50;    font-size: 14px;  " onclick="displayDate()">DATE-TIME</button>
+      <h4 id="demo1" style=" margin: 5px 0 0 0; font-size: 14px; line-height: 16px; word-wrap: break-word;"></h4>
+      </div>
+
+
       <script>
       function displayDate() {document.getElementById("demo1").innerHTML = Date();}
       </script>
